syntax = "proto3"; 

package RTC.ProtoGrpc.Data;


message Void{}

message TokenSession
{
    string accountId = 1;
    string token = 2;
}

message ServerDefine
{
    int32 port = 1;
    string address = 2;

}